fix social icons on small screen

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -556,7 +556,7 @@ hr {
   }
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 420px) {
   .title {
     font-size: 2.6rem;
   }
